# jarvis_ai

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: gcs.example.yaml  model_1b.yaml  model_7b.yaml  model_jarvis_mini_1_0.yaml
data/: __init__.py  prepare_shards.py
eval/: run_eval.py
infra/gcp/: GUIDE_5_JARVIS_MINI_ENTRAINEMENT.md  GUIDE_SIMPLE_JARVIS_MINI_GCP.md  README.md  RESET_ET_REDEMARRER.md  bootstrap_cloudbuild_assets.sh  cloudbuild_jarvis_train.yaml  cloudshell_env.sh  jarvis_mini_vertex.md  jarvis_session_env.sh  main.tf  outputs.tf  scale_checklist.md  setup_bucket.sh  submit_train_image.sh  terraform.tfvars.example  variables.tf
src/jarvis/: __init__.py
src/jarvis/agent/: __init__.py  cli.py  loop.py  tools.py
src/jarvis/memory/: __init__.py  store.py  vector.py
tests/: test_agent.py  test_data_prepare.py  test_memory.py
training/: Dockerfile  launch_gke.sh  launch_vertex.sh  train_tiny_gpt.py
training/deepspeed/: ds_config_jarvis_mini_zero2.json  ds_config_zero2.json
training/k8s/: training_job.yaml
training/megatron/: README.md  jarvis_yaml_to_args.py  run_pretrain.sh
training/vertex/: custom_job.yaml
